<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_view_pager"
            android:icon="@drawable/ic_baseline_emoji_events_24"
            android:title="@string/menu_rules" />
        <item
            android:id="@+id/nav_shoes"
            android:icon="@drawable/ic_baseline_directions_run_24"
            android:title="@string/menu_shoes" />
        <item
            android:id="@+id/nav_racquets"
            android:icon="@drawable/ic_baseline_dialpad_24"
            android:title="@string/menu_racquets" />
        <item
            android:id="@+id/nav_technique"
            android:icon="@drawable/ic_baseline_rule_24"
            android:title="@string/menu_technique" />
    </group>
</menu>